--- a/diffgeo/diffgeo.tex
+++ b/diffgeo/diffgeo.tex
@@ -17,7 +17,12 @@
 
 %\input{./doc/mechanics}
 %\input{./doc/tensor}
-%\input{./doc/gravitation}
-\input{./doc/kinenergy}
+%\input{./doc/kinenergy}
+%\input{./doc/modern-thermo}
+%
+\input{./doc/genrel}
+\input{./doc/gravitation}
+%
+%\input{./doc/index-gym}
 
 \end{document}
